# RustHW7

./: Cargo.toml
http-client/: Cargo.toml
http-client/src/: main.rs
http-server/: Cargo.toml
http-server/src/: volo_gen.rs
src/: handler.rs  main.rs
