[package]
name = "lecture7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
axum = "0.6.20"
lazy_static = "1.4.0"
pilota = "0.8.1"
serde = "1.0.188"
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
volo = "0.5.4"
volo-thrift = "0.7.2"